Bug 74805 - [TAGGEDPDF] Parsing structure elements with attached Attributes segfaults
Summary: [TAGGEDPDF] Parsing structure elements with attached Attributes segfaults
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: tagged-pdf
  Show dependency treegraph
 
Reported: 2014-02-10 18:28 UTC by Adrian Perez de Castro
Modified: 2014-02-23 17:19 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
PDF file which triggers the bug (33.32 KB, text/plain)
2014-02-10 18:28 UTC, Adrian Perez de Castro
Details
Tagged-PDF: Fix parsing of attached element attributes (1.19 KB, patch)
2014-02-10 18:32 UTC, Adrian Perez de Castro
Details | Splinter Review

Description Adrian Perez de Castro 2014-02-10 18:28:40 UTC
Created attachment 93793 [details]
PDF file which triggers the bug

Trying to loading the attached PDF crashes poppler-glib-demo.
Comment 1 Adrian Perez de Castro 2014-02-10 18:32:38 UTC
Created attachment 93794 [details] [review]
Tagged-PDF: Fix parsing of attached element attributes
Comment 2 Carlos Garcia Campos 2014-02-23 17:19:04 UTC
Pushed to git master. Thanks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.