Tagged-PDF: Fix parsing of attached element attributes

The wrong object was used as attribute dictionary, which caused
a segmentation fault when parsing PDF files in which the structure
elements included attributes attached to them. This patch fixes the
issue.

Thanks to Joanmarie Diggs <jdiggs@igalia.com> for helping in
debugging the problem.

https://bugs.freedesktop.org/show_bug.cgi?id=74805